<resources>
    <string name="app_name">Manager Apps</string>
    <string name="titleInterMain">Apps</string>
    <string name="menu_main_titleAdd">Add App</string>
    <string name="hit_appName">Name app</string>
    <string name="hit_appNameDev">Name developer</string>
    <string name="hit_appDetails">Details app</string>
    <string name="hit_appEdit">Edit app</string>
    <string name="hit_appUpdate">Update</string>
    <string name="hit_UnInstall">Uninstalled</string>
    <string name="title_actAdd">Add app</string>
    <string name="txtDeveloper">Developer</string>
    <string name="txt_btnAddApp">Install</string>
    <string name="msgEmptyViews">Item can\\\'t be empty</string>
    <string name="msgOk_AddAapp">Starting installation</string>
    <string name="msgFail_AddAapp">Installation error</string>
    <string name="msgOk_ExistsApp">The app is installed</string>
    <string name="title_lastInstalledApp">Last app Installed:</string>
    <string name="msgEmptyApps">No app installed</string>
    <string name="msgStatusInstall">Installed</string>
    <string name="msgStatusUpdate">Updated</string>
    <string name="menu_app_titleEdit">Edit app</string>
    <string name="fragm_btnEdit">Edit app</string>
    <string name="txt_btnOpen">Open</string>
    <string name="title_serviceUdate">Updating</string>
    <string name="desc_serviceUdate">Downloading update</string>
    <string name="title_serviceUdate_ok">Update completed</string>
    <string name="desc_serviceUdate_ok">100%</string>
    <string name="txt_btnUnistall">Uninstall</string>
    <string name="hit_appOpen">Open</string>
    <string name="hit_appStartingUpd">Starting Update</string>
    <string name="hit_appStartingUnins">Starting Uninstall</string>
    <string name="title_serviceUninstall">Uninstalling</string>
    <string name="desc_serviceUninstall">Deleting files</string>
    <string name="title_serviceUninstall_ok">Uninstall completed</string>
    <string name="txt_dialogUnistall">Do you want to uninstall the application?</string>
    <string name="txt_btnEditApp">Save changes</string>
    <string name="msgOk_EditApp">Updated information</string>
    <string name="msgFail_EditApp">Error in updating information</string>
</resources>
