<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

       <!-- <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_add_shopping_cart"
            android:layout_gravity="center"/>-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actEdit_appName"
            android:hint="@string/hit_appName"
            android:singleLine="true"
            android:lines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actEdit_appNameDev"
            android:hint="@string/hit_appNameDev"
            android:singleLine="true"
            android:lines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actEdit_appDetails"
            android:hint="@string/hit_appDetails"
            android:lines="5"
            android:inputType="textMultiLine"
            android:scrollHorizontally="true"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actEdit_appUpdate"
            android:text="@string/hit_appUpdate"
            />

        <Button
            android:id="@+id/actEdit_btnSaveEdit"
            android:text="@string/txt_btnEditApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>